Correction focus + responsive + contraste + head + formulaire

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .d-bloc .a-btn:hover,
@@ -275,12 +275,6 @@ a:hover {
 .row-no-gutters {
     margin-right: 0;
     margin-left: 0;
-}
-
-.row.row-no-gutters > [class^="col-"],
-.row.row-no-gutters > [class*=" col-"] {
-    padding-right: 0;
-    padding-left: 0;
 }
 
 #bloc-1-hero h1 {
@@ -827,6 +821,13 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.webp");
+}
+
+a:focus, 
+.btn:focus, 
+.img-responsive:focus, 
+.form-control:focus{
+    border: 2px dashed red;
 }
 
 @media (max-width: 1024px) {
